<resources>
    <string name="app_name">FitOurLife</string>
    <string name="forget_password">Forget Password</string>
    <string name="email_id">E-mail ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="create_account">Create New Account</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_account">Already have an account. Login</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="registered_emailID">Register EnailID</string>
    <string name="new_password">New Password</string>
    <string name="submit">Submit</string>
</resources>