<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="152dp"
        android:layout_height="206dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_logo">

    </ImageView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:id="@+id/et_fullName"
        android:textColorHint="@color/black"
        android:inputType="textPersonName"
        android:background="@drawable/et_back"
        android:layout_marginTop="20dp">

    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_id"
        android:id="@+id/et_emailID"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        android:background="@drawable/et_back"
        android:layout_marginTop="20dp">

    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/et_password"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        android:background="@drawable/et_back"
        android:layout_marginTop="20dp">

    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:id="@+id/et_confirmPassword"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        android:background="@drawable/et_back"
        android:layout_marginTop="20dp">

    </EditText>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/bt_register"
        android:layout_marginTop="20dp"
        android:textColor="@color/black">

    </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_account"
        android:id="@+id/tv_alreadyAccount"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp">

    </TextView>

</LinearLayout>