<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".ForgetPassword">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp">
    </ImageView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/registered_emailID"
        android:id="@+id/et_registeredEmailId"
        android:inputType="textEmailAddress"
        android:background="@drawable/et_back"
        android:layout_marginTop="40dp"
        android:textColorHint="@color/black">

    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:id="@+id/et_newPassword"
        android:inputType="textPassword"
        android:background="@drawable/et_back"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/black">

    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:id="@+id/et_confirmPassword"
        android:inputType="textPersonName"
        android:background="@drawable/et_back"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/black">

    </EditText>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/bt_submit"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"></Button>

</LinearLayout>